修复一些问题

--- a/config/config.json
+++ b/config/config.json
@@ -110,6 +110,541 @@
                 0.7710432410240173,
                 -0.05122668668627739
             ]
+        ],
+        "custom_1768390772": [
+            [
+                0.8918375968933105,
+                0.7561801671981812,
+                2.3691217165833223e-07
+            ],
+            [
+                0.8109359741210938,
+                0.7414675354957581,
+                -0.020203441381454468
+            ],
+            [
+                0.7345541715621948,
+                0.6984882354736328,
+                -0.038798362016677856
+            ],
+            [
+                0.6735101938247681,
+                0.6663857102394104,
+                -0.059926390647888184
+            ],
+            [
+                0.6280467510223389,
+                0.6173660159111023,
+                -0.08094961941242218
+            ],
+            [
+                0.740931510925293,
+                0.5372403860092163,
+                -0.011660018935799599
+            ],
+            [
+                0.6786197423934937,
+                0.47904273867607117,
+                -0.05525350570678711
+            ],
+            [
+                0.6451370120048523,
+                0.5031742453575134,
+                -0.09287355095148087
+            ],
+            [
+                0.6285170912742615,
+                0.5410929322242737,
+                -0.11452551186084747
+            ],
+            [
+                0.7708443999290466,
+                0.4970615804195404,
+                -0.02559003420174122
+            ],
+            [
+                0.7249289751052856,
+                0.37548643350601196,
+                -0.05352583900094032
+            ],
+            [
+                0.6812148094177246,
+                0.308937132358551,
+                -0.0804356187582016
+            ],
+            [
+                0.6406068801879883,
+                0.2575819492340088,
+                -0.09975236654281616
+            ],
+            [
+                0.8139539361000061,
+                0.4956585764884949,
+                -0.04611331224441528
+            ],
+            [
+                0.8049203157424927,
+                0.36096400022506714,
+                -0.07762409746646881
+            ],
+            [
+                0.7813010811805725,
+                0.2810858190059662,
+                -0.10136054456233978
+            ],
+            [
+                0.7524168491363525,
+                0.21295258402824402,
+                -0.11769842356443405
+            ],
+            [
+                0.8631793856620789,
+                0.5291521549224854,
+                -0.06804435700178146
+            ],
+            [
+                0.8904953598976135,
+                0.44029828906059265,
+                -0.0983085185289383
+            ],
+            [
+                0.894747793674469,
+                0.3731954097747803,
+                -0.1107146218419075
+            ],
+            [
+                0.889999270439148,
+                0.31232696771621704,
+                -0.1183147132396698
+            ]
+        ],
+        "custom_1768446887": [
+            [
+                0.7464416027069092,
+                0.10662911832332611,
+                -1.475776514325844e-07
+            ],
+            [
+                0.676186203956604,
+                0.15716025233268738,
+                -0.007356238551437855
+            ],
+            [
+                0.6368662118911743,
+                0.2823316752910614,
+                -0.02786979265511036
+            ],
+            [
+                0.6379309296607971,
+                0.4056410491466522,
+                -0.043921761214733124
+            ],
+            [
+                0.653202474117279,
+                0.48673737049102783,
+                -0.06270618736743927
+            ],
+            [
+                0.5968087315559387,
+                0.2709699273109436,
+                -0.08405252546072006
+            ],
+            [
+                0.5991913080215454,
+                0.44657719135284424,
+                -0.11621236801147461
+            ],
+            [
+                0.6069262623786926,
+                0.5509916543960571,
+                -0.1288265585899353
+            ],
+            [
+                0.6141331195831299,
+                0.6326410174369812,
+                -0.1368861347436905
+            ],
+            [
+                0.6599483489990234,
+                0.2700291872024536,
+                -0.09686942398548126
+            ],
+            [
+                0.6821314096450806,
+                0.4790937304496765,
+                -0.12959322333335876
+            ],
+            [
+                0.6986261606216431,
+                0.45554834604263306,
+                -0.1221717819571495
+            ],
+            [
+                0.698777437210083,
+                0.3968363404273987,
+                -0.11441846936941147
+            ],
+            [
+                0.7264436483383179,
+                0.26860511302948,
+                -0.10546940565109253
+            ],
+            [
+                0.7331299781799316,
+                0.4520704448223114,
+                -0.1338212788105011
+            ],
+            [
+                0.7416360378265381,
+                0.4186621904373169,
+                -0.10747348517179489
+            ],
+            [
+                0.7407805323600769,
+                0.3581719696521759,
+                -0.08555901050567627
+            ],
+            [
+                0.7902724146842957,
+                0.26705342531204224,
+                -0.11330850422382355
+            ],
+            [
+                0.7851869463920593,
+                0.4223387539386749,
+                -0.1332884430885315
+            ],
+            [
+                0.7861359715461731,
+                0.40008270740509033,
+                -0.11362850666046143
+            ],
+            [
+                0.786634087562561,
+                0.3501132130622864,
+                -0.09624513983726501
+            ]
+        ],
+        "custom_1768447410": [
+            [
+                0.9070745706558228,
+                0.7796236276626587,
+                -8.656961369979399e-08
+            ],
+            [
+                0.8689157962799072,
+                0.6582134366035461,
+                -0.010280992835760117
+            ],
+            [
+                0.7995936870574951,
+                0.5560879111289978,
+                -0.03546374291181564
+            ],
+            [
+                0.7559579610824585,
+                0.4713176488876343,
+                -0.058005400002002716
+            ],
+            [
+                0.7480553984642029,
+                0.38918784260749817,
+                -0.07961277663707733
+            ],
+            [
+                0.7791020274162292,
+                0.6189935803413391,
+                -0.08684951812028885
+            ],
+            [
+                0.65400230884552,
+                0.6162232756614685,
+                -0.11615825444459915
+            ],
+            [
+                0.689365804195404,
+                0.6167037487030029,
+                -0.12265738099813461
+            ],
+            [
+                0.7318296432495117,
+                0.6156039834022522,
+                -0.1220235675573349
+            ],
+            [
+                0.7778422832489014,
+                0.713787317276001,
+                -0.09334442019462585
+            ],
+            [
+                0.6470943093299866,
+                0.6929691433906555,
+                -0.11431864649057388
+            ],
+            [
+                0.684867262840271,
+                0.6860829591751099,
+                -0.10433723032474518
+            ],
+            [
+                0.7297234535217285,
+                0.6890257596969604,
+                -0.09755247086286545
+            ],
+            [
+                0.7750574350357056,
+                0.7956281900405884,
+                -0.09645310044288635
+            ],
+            [
+                0.6575143337249756,
+                0.76753830909729,
+                -0.10643677413463593
+            ],
+            [
+                0.6924126744270325,
+                0.7562130689620972,
+                -0.08157891035079956
+            ],
+            [
+                0.7353503704071045,
+                0.7567590475082397,
+                -0.06585230678319931
+            ],
+            [
+                0.773209273815155,
+                0.8633873462677002,
+                -0.09984870254993439
+            ],
+            [
+                0.6774238348007202,
+                0.8321161270141602,
+                -0.10221070051193237
+            ],
+            [
+                0.7021023035049438,
+                0.8182137608528137,
+                -0.08118285238742828
+            ],
+            [
+                0.7383725047111511,
+                0.8205446600914001,
+                -0.06673406064510345
+            ]
+        ],
+        "custom_1768447787": [
+            [
+                0.7671239972114563,
+                0.7618786096572876,
+                5.885909786229604e-07
+            ],
+            [
+                0.6971186399459839,
+                0.7186239957809448,
+                -0.03406812250614166
+            ],
+            [
+                0.6404638886451721,
+                0.6364566087722778,
+                -0.05569338798522949
+            ],
+            [
+                0.5969777703285217,
+                0.5678866505622864,
+                -0.07465323805809021
+            ],
+            [
+                0.548670768737793,
+                0.5282347202301025,
+                -0.0957021415233612
+            ],
+            [
+                0.7088102102279663,
+                0.5041441917419434,
+                -0.050606243312358856
+            ],
+            [
+                0.6943987607955933,
+                0.38379836082458496,
+                -0.07994949072599411
+            ],
+            [
+                0.6839277148246765,
+                0.30665260553359985,
+                -0.10169650614261627
+            ],
+            [
+                0.6763973236083984,
+                0.2383909821510315,
+                -0.11867164075374603
+            ],
+            [
+                0.7620537281036377,
+                0.4979192614555359,
+                -0.057714156806468964
+            ],
+            [
+                0.7641655206680298,
+                0.3658979833126068,
+                -0.08730187267065048
+            ],
+            [
+                0.764980137348175,
+                0.27610841393470764,
+                -0.11231859773397446
+            ],
+            [
+                0.7663232088088989,
+                0.1944178342819214,
+                -0.13107894361019135
+            ],
+            [
+                0.8102327585220337,
+                0.5214334726333618,
+                -0.06776314973831177
+            ],
+            [
+                0.8364583849906921,
+                0.40149247646331787,
+                -0.1037110909819603
+            ],
+            [
+                0.854866623878479,
+                0.3205994963645935,
+                -0.1297682672739029
+            ],
+            [
+                0.8679981231689453,
+                0.2444188892841339,
+                -0.14750874042510986
+            ],
+            [
+                0.8530576825141907,
+                0.5661097168922424,
+                -0.07926997542381287
+            ],
+            [
+                0.8989937901496887,
+                0.490666002035141,
+                -0.1145477145910263
+            ],
+            [
+                0.929760754108429,
+                0.44090718030929565,
+                -0.13152219355106354
+            ],
+            [
+                0.953698992729187,
+                0.38985544443130493,
+                -0.14265316724777222
+            ]
+        ],
+        "custom_1768473644": [
+            [
+                0.8243506550788879,
+                0.8603438138961792,
+                4.5499893985834206e-07
+            ],
+            [
+                0.8848276138305664,
+                0.7626805305480957,
+                0.006960389204323292
+            ],
+            [
+                0.9007338881492615,
+                0.6420124769210815,
+                -0.001778026344254613
+            ],
+            [
+                0.8835222125053406,
+                0.5428926944732666,
+                -0.010621833615005016
+            ],
+            [
+                0.8322321176528931,
+                0.5121330618858337,
+                -0.016488337889313698
+            ],
+            [
+                0.8733740448951721,
+                0.6051638126373291,
+                -0.04520142078399658
+            ],
+            [
+                0.8437292575836182,
+                0.49168503284454346,
+                -0.06544359028339386
+            ],
+            [
+                0.83527672290802,
+                0.5255308151245117,
+                -0.07281216979026794
+            ],
+            [
+                0.8337902426719666,
+                0.5698972344398499,
+                -0.07209564000368118
+            ],
+            [
+                0.8139556646347046,
+                0.6152162551879883,
+                -0.05589034780859947
+            ],
+            [
+                0.8023403286933899,
+                0.4546462297439575,
+                -0.0743781253695488
+            ],
+            [
+                0.8019672632217407,
+                0.3565742075443268,
+                -0.08077006042003632
+            ],
+            [
+                0.8039448261260986,
+                0.28433603048324585,
+                -0.08583298325538635
+            ],
+            [
+                0.7560006380081177,
+                0.6353604793548584,
+                -0.06064547598361969
+            ],
+            [
+                0.7571597099304199,
+                0.5107334852218628,
+                -0.06855282932519913
+            ],
+            [
+                0.7718824744224548,
+                0.5428837537765503,
+                -0.048184361308813095
+            ],
+            [
+                0.778571605682373,
+                0.5871226787567139,
+                -0.03204711526632309
+            ],
+            [
+                0.714136004447937,
+                0.6620191931724548,
+                -0.06458888202905655
+            ],
+            [
+                0.7272248864173889,
+                0.5613633990287781,
+                -0.055223498493433
+            ],
+            [
+                0.743679940700531,
+                0.5891591906547546,
+                -0.023163089528679848
+            ],
+            [
+                0.7481169104576111,
+                0.6261104345321655,
+                0.000673227827064693
+            ]
         ]
     },
     "gesture_mappings": [
@@ -145,14 +680,42 @@
             "id": "point_up",
             "name": "竖起食指",
             "action_type": "mouse",
-            "action_value": "right_click",
+            "action_value": "left_click",
             "enabled": true
         },
         {
-            "id": "custom_1768319127",
-            "name": "友好手势",
+            "id": "custom_1768390772",
+            "name": "OK",
             "action_type": "mouse",
             "action_value": "left_click",
+            "enabled": true
+        },
+        {
+            "id": "custom_1768446887",
+            "name": "down",
+            "action_type": "key",
+            "action_value": "",
+            "enabled": true
+        },
+        {
+            "id": "custom_1768447410",
+            "name": "点赞",
+            "action_type": "key",
+            "action_value": "",
+            "enabled": true
+        },
+        {
+            "id": "custom_1768447787",
+            "name": "张开",
+            "action_type": "key",
+            "action_value": "",
+            "enabled": true
+        },
+        {
+            "id": "custom_1768473644",
+            "name": "友好手势",
+            "action_type": "key",
+            "action_value": "",
             "enabled": true
         }
     ]
